# Loopy

./: .gitignore  README.md  build.gradle  licenses.yml  settings.gradle  settings.gradle.kts
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/michaelpohl/loopyplayer2/: ExampleInstrumentedTest.kt
app/src/androidTest/java/de/michaelpohl/loopy/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: about_de.md  about_default.md  help.md  help_de.md  help_default.md  licenses.html  licenses.json  whatsnew_de.md  whatsnew_default.md
app/src/main/cpp/: AAssetDataSource.cpp  AAssetDataSource.h  AudioCallback.cpp  AudioCallback.h  AudioEngine.cpp  AudioEngine.h  Constants.h  Converter.cpp  Converter.h  DataSource.h  IRenderableAudio.h  LockFreeQueue.h  Mixer.h  NDKExtractor.cpp  NDKExtractor.h  ObserverChain.cpp  OpenGLFunctions.cpp  Player.cpp  Player.h  StorageDataSource.cpp  StorageDataSource.h  UtilityFunctions.cpp  UtilityFunctions.h  native-lib.cpp
app/src/main/cpp/utils/: UtilityFunctions.cpp  logging.h
app/src/main/java/com/michaelpohl/loopyplayer2/: JNIListener.java  KoinGraph.kt  LoopyApplication.kt  MainActivity.kt  SplashActivity.kt
app/src/main/java/de/michaelpohl/loopy/: JNIListener.java  KoinGraph.kt  LoopyApplication.kt  MainActivity.kt  SplashActivity.kt
app/src/main/res/color/: background_clickable_item.xml
app/src/main/res/drawable/: background_item_rounded_filled.xml  background_item_rounded_filled_green.xml  background_item_rounded_stroke.xml  background_splash.xml  divider.xml  ic_back.xml  ic_check.xml  ic_folder.xml  ic_help.xml  ic_launcher_foreground.xml  ic_loopy_foreground.xml  ic_pause.xml  ic_radio_button_checked.xml  ic_radio_button_unchecked.xml  ic_stop.xml  ic_trash.xml  loopy_logo.xml  radio_button.xml
app/src/main/res/layout/: activity_splash.xml  app_bar_main.xml  content_main.xml  content_splash.xml  dialog_pick_filetypes.xml  dialog_settings.xml  drawer_header.xml  fragment_album_browser.xml  fragment_files_list.xml  fragment_help.xml  fragment_licenses.xml  fragment_main.xml  fragment_markdown_viewer.xml  fragment_markup_viewer.xml  fragment_media_list.xml  fragment_mediastore_list.xml  fragment_player.xml  fragment_settings.xml  item_album_browser.xml  item_browser.xml  item_file_browser.xml  item_license.xml  item_loop.xml  item_music_browser.xml  item_recycler_file.xml  item_settings_checkable.xml  item_settings_header.xml  item_settings_multiplechoice.xml  item_settings_toggleable.xml  main_activity.xml  nav_header_main.xml
app/src/main/res/menu/: menu_album_browser.xml  menu_drawer_entries.xml  menu_file_browser.xml  menu_main.xml
app/src/main/res/mipmap-anydpi-v26/: ic_loopy_round.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: colors.xml  ic_launcher_background.xml  strings.xml  styles.xml  styles_base.xml  text_appearances.xml  themes.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/xml/: provider_paths.xml
app/src/test/java/com/michaelpohl/loopyplayer2/: ExampleUnitTest.kt
app/src/test/java/de/michaelpohl/loopy/: ExampleUnitTest.kt
player/: CMakeLists.txt  build.gradle
player/src/androidTest/java/com/michaelpohl/player/: ExampleInstrumentedTest.kt
player/src/main/: AndroidManifest.xml
player/src/main/cpp/: AudioCallback.cpp  AudioEngine.cpp  AudioEngine.h  Converter.cpp  Converter.h  DataSource.h  IRenderableAudio.h  LockFreeQueue.h  Mixer.h  NDKExtractor.cpp  NDKExtractor.h  ObserverChain.cpp  ObserverChain.h  OpenGLFunctions.cpp  OpenGLFunctions.h  Player.cpp  Player.h  StorageDataSource.cpp  StorageDataSource.h  native-lib.cpp
player/src/main/cpp/utils/: AudioFile.h  UtilityFunctions.h  logging.h
player/src/main/java/com/michaelpohl/player/: JniPlayer.kt  PlayerInterface.kt
player/src/test/java/com/michaelpohl/player/: ExampleUnitTest.kt
(+360 files in other folders)
